@@ -5526,6 +5526,7 @@ cb_build_optim_add (cb_tree v, cb_tree n)
 				break;
 			}
 #else
+#ifdef COB_ALLOW_UNALIGNED
 			if (f->usage == CB_USAGE_COMP_5) {
 				switch (f->size) {
 				case 1:
@@ -5537,6 +5538,7 @@ cb_build_optim_add (cb_tree v, cb_tree n)
 					break;
 				}
 			}
+#endif
 			optimize_defs[bin_add_funcs[z].optim_val] = 1;
 			s = bin_add_funcs[z].optim_name;
 #endif
@@ -5598,6 +5600,7 @@ cb_build_optim_sub (cb_tree v, cb_tree n)
 				break;
 			}
 #else
+#ifdef COB_ALLOW_UNALIGNED
 			if (f->usage == CB_USAGE_COMP_5) {
 				switch (f->size) {
 				case 1:
@@ -5609,6 +5612,7 @@ cb_build_optim_sub (cb_tree v, cb_tree n)
 					break;
 				}
 			}
+#endif
 			optimize_defs[bin_sub_funcs[z].optim_val] = 1;
 			s = bin_sub_funcs[z].optim_name;
 #endif
