@@ -1,6 +1,11 @@
 
 2019-09-15  Ron Norman <rjn@inglenet.com>
 
+	* typeck.c: Emit ADD/SUBTRACT shortcut for COMP-5 only 
+	            if COB_ALLOW_UNALIGNED defined
+
+2019-09-15  Ron Norman <rjn@inglenet.com>
+
 	* tree.h: Revert 'lock_mode' back to an 'int'
 	* codegen.c,debug.c: Changes for 'lock_mode' being an 'int'
 
